--- a/index.html
+++ b/index.html
@@ -142,6 +142,93 @@
         </div>
       </div>
     </section>
+    <section class="prefootone">
+      <div class="hero-body">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-4">
+              <h1 class="whyhead">No ads. No trackers. No kidding.</h1>
+                <p class="innerpara">There are no ads, no affiliate marketers, and no creepy tracking in Signal. So focus on sharing the moments that matter with the people who matter to you.</p>
+            </div>
+            <div class="col-md-8">
+              <img class="noadimg" src="images/No-Ads.png" alt="no ads">
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="prefoottwo">
+      <div class="hero-body">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-8">
+              <img class="nonproimg" src="images/Nonprofit503.png" alt="no ads">
+            </div>
+            <div class="col-md-4">
+              <h1 class="whyhead">Free for Everyone</h1>
+                <p class="innerpara">Signal is an independent nonprofit. We're not tied to any major tech companies, and we can never be acquired by one either. Development is supported by grants and donations from people like you.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="footer">
+      <div class="hero-body">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-4">
+              <p>© 2013–2024 Signal, a 501c3 nonprofit.
+                "Signal", Signal logos, and other trademarks are trademarks or registered trademarks of Signal Technology Foundation in the United States and other countries (more info here).
+                
+                For media inquiries, contact press@signal.org</p>
+                <br>
+            </div>
+            <div class="col-md-2">
+              <p class="taghd">Organization</p>
+              <a class="tags" href="https://signal.org/donate/">Donate</a>
+              <br>
+              <a class="tags" href="https://signal.org/donate/">Careers</a>
+              <br>
+              <a class="tags" href="https://signal.org/donate/">Blog</a>
+              <br>
+              <a class="tags" href="https://signal.org/donate/">Brand Assets</a>
+              <br>
+              <a class="tags" href="https://signal.org/donate/">Terms & Privacy Policy</a>
+              <br>
+            </div>
+            <div class="col-md-2">
+              <p class="taghd">Download</p>
+              <a class="tags" href="https://signal.org/donate/">Android</a>
+              <br>
+              <a class="tags" href="https://signal.org/donate/">iPhone & iPad</a>
+              <br>
+              <a class="tags" href="https://signal.org/donate/">Windows</a>
+              <br>
+              <a class="tags" href="https://signal.org/donate/">Mac</a>
+              <br>
+              <a class="tags" href="https://signal.org/donate/">Linux</a>
+              <br>
+            </div>
+            <div class="col-md-2">
+              <p class="taghd">Social</p>
+              <a class="tags" href="https://signal.org/donate/">GitHub</a>
+              <br>
+              <a class="tags" href="https://signal.org/donate/">Twitter</a>
+              <br>
+              <a class="tags" href="https://signal.org/donate/">Instagram</a>
+              <br>
+            </div>
+            <div class="col-md-2">
+              <p class="taghd">Help</p>
+              <a class="tags" href="https://signal.org/donate/">Support Center</a>
+              <br>
+              <a class="tags" href="https://signal.org/donate/">Community</a>
+              <br>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
